php-test-app.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: php-test-git
  labels:
    app: php-test-git
    app.kubernetes.io/component: php-test-git
    app.kubernetes.io/instance: php-test-git
    app.kubernetes.io/name: php
    app.kubernetes.io/part-of: php-test-git-app
    app.openshift.io/runtime: php
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: php-test-git
      deploymentconfig: php-test-git
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: php-test-git
        deploymentconfig: php-test-git
    spec:
      volumes:
        - name: webroot-mount
          persistentVolumeClaim:
            claimName: webroot
      containers:
        - name: php-test-git
          image: php-test-git:latest
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
          resources: {}
          volumeMounts:
            - name: webroot-mount
              mountPath: /opt/app-root/files
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
              - ALL
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
...
---
kind: Service
apiVersion: v1
metadata:
  name: php-test-git
  labels:
    app: php-test-git
    app.kubernetes.io/component: php-test-git
    app.kubernetes.io/instance: php-test-git
    app.kubernetes.io/name: php
    app.kubernetes.io/part-of: php-test-git-app
    app.openshift.io/runtime: php
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: 8443-tcp
      protocol: TCP
      port: 8443
      targetPort: 8443
  selector:
    app: php-test-git
    deploymentconfig: php-test-git
  type: ClusterIP
  sessionAffinity: None
...
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: php-test-git
  labels:
    app: php-test-git
    app.kubernetes.io/component: php-test-git
    app.kubernetes.io/instance: php-test-git
    app.kubernetes.io/name: php
    app.kubernetes.io/part-of: php-test-git-app
    app.openshift.io/runtime: php
spec:
  to:
    kind: Service
    name: php-test-git
    weight: 100
  port:
    targetPort: 8080-tcp
  wildcardPolicy: None
...
